--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -31,6 +32,11 @@ android {
     }
 }
 
+ext {
+    room_Version = '2.2.5'
+    archLifecycle_Version = '2.2.0'
+}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -40,4 +46,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "androidx.room:room-ktx:$room_Version"
+    kapt "androidx.room:room-compiler:$room_Version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycle_Version"
+
 }
